--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
