--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.2",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
