--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^9.0.0",
+    "react-responsive": "^10.0.1",
     "rehype-highlight": "^7.0.0",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.3"
